2006-02-24  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-ui.h: change Replace accel to ctrl+H as mandated, by the
	HIG.

2006-02-22  Steve Frécinaux  <steve@istique.net>

	* plugins/externaltools/tools/tools.glade:
	* plugins/externaltools/tools/manager.py:

	Use a GtkSourceView and text wrapping for command text view.
	Also fix bug #331114 by removing all the size requests.

2006-02-22  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/snippets/snippets/SnippetsLibrary.py: fixed get_snippets()
	to return a copy of the snippets data instead of the data itself.

2006-02-19  Paolo Borelli  <pborelli@katamail.com>

	* plugins/spell/gedit-spell-plugin.c: fix thinko (returning NULL
	iconditionally is not a good idea). Fixes bug 331811.

2006-02-19  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-command-file.c:
	* gedit/gedit-command-view.c:
	* gedit/gedit-tab.[ch]:

	fix compiler warnings.

2006-02-19  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-document.[ch]:
	* gedit/gedit-document-loader.[ch]:
	* gedit/gedit-tab.[ch]:
	* gedit/gedit-command-file.c:

	make the file load api return null in all the involved functions to
	reflect that it is async. Handle correctly valid uris that however
	return a null vfs-uri.

2006-02-19  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/snippets/snippets/SnippetsLibrary.py: inspect files as lazy as
	possible. Files will be scanned now on first request for snippet data from
	the plugin (either dialog or controller in the view)
	* plugins/snippets/snippets/__init__.py: remove old error message code,
	call SnippetsLibrary().set_dirs instead of SnippetsLibrary().set_data

2006-02-18  Paolo Maggi  <paolo@gnome.org>

	Lazy loading of taglists (improve gedit startup time when taglist plugin
	is active)
	
	* plugins/taglist/gedit-taglist-plugin-panel.c (expose_event_cb):
	If needed load taglists from files at the first expose and populate the
	combobox