@@ -1,5 +1,10 @@
 2006-02-24  Paolo Borelli  <pborelli@katamail.com>
 
+	* gedit/gedit-view.c: use gtk_accelerator_get_default_mod_mask
+	instead of hardcoding SHIFT | CONTROL.
+
+2006-02-24  Paolo Borelli  <pborelli@katamail.com>
+
 	* gedit/gedit-ui.h: change Replace accel to ctrl+H as mandated, by the
 	HIG.
 
